Add tienda selection dropdown to index.html

--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
     <div class="grid3">
       <div>
         <label>Tienda</label>
+        <select id="tienda">
+          <option value="">Selecciona…</option>
+          <option>Alberto Alcocer</option>
+          <option>Valencia</option>
+          <option>Ayala</option>
+          <option>Hermosilla</option>
+          <option>Sevilla</option>
+          <option>Zaragoza</option>
+          <option>Cea</option>
+        </select>
+
         <input id="tienda" placeholder="Ej: Hermosilla / Valencia"/>
       </div>
       <div>
