Add 'Compartir' button to CSV export section

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
       <div class="row">
         <button class="primary" id="btnExport">Exportar CSV</button>
         <button id="btnCopiar">Copiar CSV</button>
+        <button id="btnCompartir">Compartir</button>
       </div>
     </div>
     <div class="sep"></div>
