Add button type attributes for camera controls

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <div class="row" style="justify-content:space-between">
       <div class="hint">Si el escaneo no va en tu móvil, usa “Sumar por EAN (teclado)”.</div>
       <div class="row">
-        <button class="good" id="btnStartCam">Abrir cámara</button>
-        <button id="btnStopCam" disabled>Cerrar</button>
+        <button type="button" class="good" id="btnStartCam">Abrir cámara</button>
+        <button type="button" id="btnStopCam" disabled>Cerrar</button>
       </div>
     </div>
     <div class="cameraWrap" id="cameraWrap" style="display:none;margin-top:10px">
