--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <div>
         <label>Sesión</label>
         <button class="primary" id="btnNuevaSesion">Iniciar sesión</button>
+        <button type="button" id="btnCargarSesion">Cargar sesión</button>
         <div class="hint small" id="sesionHint">Sin sesión</div>
       </div>
     </div>
