Add torch button to camera controls

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
       <div class="row">
         <button type="button" class="good" id="btnStartCam">Abrir cámara</button>
         <button type="button" id="btnStopCam" disabled>Cerrar</button>
+        <button type="button" id="btnTorch" disabled>Linterna</button>
       </div>
     </div>
 
