--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           <option>Sevilla</option>
           <option>Zaragoza</option>
           <option>Cea</option>
+          <option>Central</option>
         </select>
       </div>
 
